@startuml
'https://plantuml.com/class-diagram

class ExecuteRequirementEvaluationUI
class ExecuteRequirementEvaluationController {
    }
class ExecuteListOfApplicationsService{
    evaluateListOfApplications(jobApplications)
    }
interface JobApplicationRepository{
    findByJobOpeningAndWithRequirementAnswer(jobOpening)
    save(jobApplication)
    }
class JobOpening
class JobApplication{
    defineResult(result)
}
class JobRequirementSpecification{
    evaluate(requirementAnswer)
    }
class RequirementAnswer{
    inputStreamOrResourceFile()
    }


ExecuteRequirementEvaluationUI -> ExecuteRequirementEvaluationController
ExecuteRequirementEvaluationController --> JobApplicationRepository
ExecuteRequirementEvaluationController -> ExecuteListOfApplicationsService
ExecuteListOfApplicationsService --> JobApplicationRepository
ExecuteListOfApplicationsService --> JobOpening
ExecuteListOfApplicationsService --> JobApplication
JobOpening --> JobRequirementSpecification
JobApplication --> RequirementAnswer

@enduml